--- a/portfolio.css
+++ b/portfolio.css
@@ -1,21 +1,40 @@
 
 body { font-family: 'Helvetica Neue', sans-serif;
        font-size: 20px;
+       padding: 50px;
 }
 
 h2 { font-size: 15px;
   text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 0.5px;
  }
 
 
 
 p { font-family: 'Helvetica Neue', sans-serif;
   font-size: 16px; l
-  line-height: 24px;
+  line-height: 30px;
   margin: 0 0 24px;
   text-align: justify;
   text-justify: inter-word; }
 
 #bio {
   width: 500px;
+  line-height: 20px;
+}
+
+#socialmedia li, #contact li, #projects li {
+  list-style-type: none;
+  display: inline;
+}
+
+#projects, #socialmedia {
+  text-align: center;
+  padding-top: 20px;
+}
+
+ul {
+  margin-left: -40px;
+
 }
