Added media queries for mobile devices

--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Helvetica Neue', sans-serif;
   font-size: 20px;
   background-color: #fff;
-  color: #fff;
+
   margin-top: -20px;
 }
 
@@ -41,13 +41,16 @@ p { font-family: 'Helvetica Neue', sans-serif;
     padding: 50px 0 0 60px;
     width: 500px;
     line-height: 25px;
+
   }
 
   #bio p{
     padding: 30px;
-
+    border-radius: 5px;
     font-weight: lighter;
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0,0,0,0.5);
+    color: #fff;
+    letter-spacing: 0.5px;
   }
 
 #bio a {
@@ -63,7 +66,11 @@ p { font-family: 'Helvetica Neue', sans-serif;
 
 h1 {
     padding: 50px 0 0 65px;
-
+    color: #fff;
+    font-weight: lighter;
+    letter-spacing: 1.5px;
+    font-size: 40px;
+    text-shadow: 1px 1px 0 #000;
 }
 
 #socialmedia li, #projects li, #contact li {
@@ -143,4 +150,34 @@ h1 {
   color: #727272;
   margin-top: 20px;
 
+}
+
+@media only screen and (max-width: 480px) {
+
+
+  #welcome {
+
+    background-size: 500px;
+
+  }
+
+  #bio {
+    width: 400px;
+  }
+
+  projects li {
+
+
+    margin-right: 0;
+  }
+
+#projects ul{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+
+}
+#socialmedia img{
+  width: 20px;
+}
 }
