--- a/public/portfolio.css
+++ b/public/portfolio.css
@@ -152,23 +152,21 @@ h1 {
 
 }
 
-@media only screen and (max-width: 375px) {
+@media only screen and (max-width: 320px) {
 
 
   #welcome {
 
-    background-size: 375px;
+    background-size: 320px;
 
   }
 
   #bio {
-    width: 330px;
+    width: 300x;
     font-size: 13px;
   }
 
   projects li {
-
-
     margin-right: 0;
   }
 
@@ -176,6 +174,7 @@ h1 {
   display: flex;
   justify-content: center;
   flex-direction: column;
+  margin: auto;
 
 }
 #socialmedia img{
